// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletedFoo 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="Hello"
    />
  </div>
  <hr />
  <div>
    <label>
      title
    </label>
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <input
    type="submit"
    value="Save"
  />
</form>
`;

exports[`FullFoo 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="Hello"
    />
  </div>
  <hr />
  <div>
    <label>
      title
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="Hello"
    />
  </div>
  <input
    type="submit"
    value="Save"
  />
</form>
`;

exports[`NewFoo 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
    </label>
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <hr />
  <div>
    <label>
      title
    </label>
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <input
    type="submit"
    value="Save"
  />
</form>
`;
